version 1.00BETA will be released soon

    - E2 message
    - E3 message
    - batt low indicator